# Cargo.toml

[package]
name = "perf-vumeter"
version = "0.1.2"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
env_logger = "*"
log = "*"
structopt = "*"

[build-dependencies]
build-data = "*"

[profile.release]
lto = true
opt-level = 3 #default
# opt-level = 'z'  # Optimize for size.

# EOF
