# Cargo.toml

[package]
name = "perf_vumeter"
version = "0.1.5"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
structopt = "0.3"


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = "s" # static
# opt-level = 3 # default
# opt-level = 'z'  # Optimize for size.

# EOF
