# Cargo.toml

[package]
name = "perf_vumeter"
version = "1.0.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
build-data = "0"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
